[package]
name = "touls"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Jan <MapManagement@protonmail.com>"]
description = "Some helpful server tools packed into one CLI software."
readme = "../README.md"
homepage = "https://github.com/MapManagement/touls"
repository = "https://github.com/MapManagement/touls"
keywords = ["cli", "tools", "server-helper"]
categories = ["command-line-utilities"]
edition = "2021"

[workspaces]
members = [".", "borgflux", "wakey-wakey"]


[dependencies]
clap = { version = "4.3.23", features = ["derive", "cargo"] }
borgflux = { path = "borgflux", version = "0.1.0"}
wakey-wakey = { path = "wakey-wakey", version = "0.1.0" }
